yaml/testapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: testapp
  template:
    metadata:
      labels:
        app: testapp
    spec:
      containers:
      - image: nxpy/k8s-flask-app
        # add version to the image
        version: v1
        name: testapp
        ports:
        - containerPort: 80
