yaml/testapp-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: testapp-rollout
spec:
  replicas: 3
  selector:
    matchLabels:
      app: testapp
  strategy:
    canary:
      maxSurge: 25%
      maxUnavailable: 0
      steps:
        - setWeight: 10
        - pause:
            duration: 10s
        - setWeight: 20
        - pause: {}
  template:
    metadata:
      labels:
        app: testapp
    spec:
      containers:
        - image: nxpy/k8s-flask-app:d5e2ac5ab0073ea3eb958ddb667fe7e2d9215b7b
          name: testapp
          ports:
            - containerPort: 80
