yaml/testapp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: testapp
spec:
  containers:
  - name: testapp
    image: nxpy/k8s-flask-app
    imagePullPolicy: Never
    resources:
      limits:
        memory: "200Mi"
