yaml/testapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapp
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: testapp
